# IndicScriptSwap

./: Cargo.toml  README.md  error.txt  foo  out.txt
src/: convert.rs  data.rs  functions.rs  lib.rs  main.rs  read_mappings.rs  tokens.rs
src/data/: script_mapping.json
tests/: tests.rs
