[package]
name = "IndicScriptSwap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1
incremental = true

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
lazy_static = "1.4.0"
maplit = "1" 

[lib]
name = "IndicScriptSwap"
path = "src/lib.rs"

[[bin]]
name = "IndicScriptSwap"
path = "src/main.rs"
